# notes

./: .gitignore  .gitmodules  TODO.md
components/crypto/mbedtls/: mbedtls.md
components/data structure/lwrb/: lwrb.md
components/flash/ndbm/: db.c
components/iot/miot-esp32-sdk/: miot-esp32-sdk.md
components/ndbm/: README.md
components/os/freertos/: freertos.md
components/protocol/HTTPClient/: HTTPClient.md
components/protocol/nimble/: nimble.md
components/protocol/xmodem/: xmodem.md
components/protocols/gRPC/: gRPC.md
design/ChatGPT/: 01设计嵌入式软件以应对变革.md  02推荐的网站、教程和组织.md  03进阶路线.md  04推荐书籍.md
env/vscode/: Snippets in Visual Studio Code.md  c_cpp_properties.json reference.md
help/git/: 01_git submodule.md
help/vscode/: 01_vscode终端无法执行命令.md  c_cpp_properties.json reference.md
ndbm/: README.md  apue_db.h  main.c
network/WiFi/: WiFi.md
network/protocol/MQTT/: MQTT.md
program/utest/googletest/examples/googletest_cmake/src/calculator/: CMakeLists.txt  calculator.c  my_add.c  my_mul.c  my_sub.c
program/utest/googletest/examples/googletest_cmake/src/calculator/include/calculator/: calculator.h  my_div.h  my_mul.h  my_sub.h
program/utest/googletest/examples/googletest_cmake/test/: CMakeLists.txt
program/utest/googletest/examples/googletest_cmake/test/calculator/: CMakeLists.txt  test_calculator.cc
program/utest/googletest/examples/googletest_cmake/test/stack/: CMakeLists.txt  test_stack.cc
specifications/Conventional Commits/: Conventional Commits.md
specifications/clangformat/: .google-clang-format
tools/Bus Hound/: Bus Hound.md
(+55 files in other folders)
